Separate loop listeners from policies