@@ -1,6 +1,5 @@
 package net.davidrobles.axon;
 
-import java.util.Collections;
 import java.util.List;
 import net.davidrobles.axon.policies.Policy;
 
@@ -10,12 +9,12 @@ import net.davidrobles.axon.policies.Policy;
  * <p>Keeps the loop logic out of individual {@link Agent} implementations so each algorithm only
  * needs to define its update rule.
  *
- * <p>Policy lifecycle calls per episode:
+ * <p>Loop listener lifecycle calls per episode:
  *
  * <ol>
- *   <li>{@link Policy#reset()} — start of episode
- *   <li>{@link Policy#onStep(int)} — after every step
- *   <li>{@link Policy#onEpisodeEnd(int)} — end of episode
+ *   <li>{@link LoopListener#onEpisodeStart(int)} — start of episode
+ *   <li>{@link LoopListener#onStep(int)} — after every step
+ *   <li>{@link LoopListener#onEpisodeEnd(int)} — end of episode
  * </ol>
  */
 public class RLLoop {
@@ -26,7 +25,7 @@ public class RLLoop {
      *
      * @param env the environment
      * @param agent the agent to train
-     * @param policy the policy driving action selection (receives lifecycle callbacks)
+     * @param policy the policy driving action selection
      * @param numEpisodes number of episodes to run; must be non-negative
      * @param <S> state type
      * @param <A> action type
@@ -34,13 +33,34 @@ public class RLLoop {
      */
     public static <S, A> void run(
             Environment<S, A> env, Agent<S, A> agent, Policy<S, A> policy, int numEpisodes) {
+        run(env, agent, policy, numEpisodes, new LoopListener[0]);
+    }
+
+    /**
+     * Runs {@code numEpisodes} full episodes of interaction between {@code env} and {@code agent}.
+     *
+     * @param env the environment
+     * @param agent the agent to train
+     * @param policy the policy driving action selection
+     * @param numEpisodes number of episodes to run; must be non-negative
+     * @param listeners loop listeners receiving training lifecycle callbacks
+     * @param <S> state type
+     * @param <A> action type
+     * @throws IllegalArgumentException if {@code numEpisodes} is negative
+     */
+    public static <S, A> void run(
+            Environment<S, A> env,
+            Agent<S, A> agent,
+            Policy<S, A> policy,
+            int numEpisodes,
+            LoopListener... listeners) {
         if (numEpisodes < 0)
             throw new IllegalArgumentException(
                     "numEpisodes must be non-negative, got: " + numEpisodes);
         int totalSteps = 0;
 
         for (int ep = 0; ep < numEpisodes; ep++) {
-            policy.reset();
+            notifyEpisodeStart(ep, listeners);
             S state = env.reset();
             List<A> actions = env.getActions(state);
 
@@ -48,9 +68,7 @@ public class RLLoop {
                 A action = agent.selectAction(state, actions);
                 StepResult<S> result = env.step(action);
                 List<A> nextActions =
-                        result.done()
-                                ? Collections.emptyList()
-                                : env.getActions(result.nextState());
+                        result.done() ? List.of() : env.getActions(result.nextState());
                 agent.update(
                         new Experience<>(
                                 state,
@@ -59,14 +77,14 @@ public class RLLoop {
                                 result.nextState(),
                                 result.done(),
                                 nextActions));
-                policy.onStep(++totalSteps);
+                notifyStep(++totalSteps, listeners);
 
                 if (result.done()) break;
                 state = result.nextState();
                 actions = nextActions;
             }
 
-            policy.onEpisodeEnd(ep);
+            notifyEpisodeEnd(ep, listeners);
         }
     }
 
@@ -75,7 +93,7 @@ public class RLLoop {
      * that only updates state values.
      *
      * @param env the environment
-     * @param policy the policy driving action selection (receives lifecycle callbacks)
+     * @param policy the policy driving action selection
      * @param predictor the predictor to update from observed transitions
      * @param numEpisodes number of episodes to run; must be non-negative
      * @param <S> state type
@@ -84,13 +102,35 @@ public class RLLoop {
      */
     public static <S, A> void run(
             Environment<S, A> env, Policy<S, A> policy, Predictor<S> predictor, int numEpisodes) {
+        run(env, policy, predictor, numEpisodes, new LoopListener[0]);
+    }
+
+    /**
+     * Runs {@code numEpisodes} full episodes using an externally supplied policy and a predictor
+     * that only updates state values.
+     *
+     * @param env the environment
+     * @param policy the policy driving action selection
+     * @param predictor the predictor to update from observed transitions
+     * @param numEpisodes number of episodes to run; must be non-negative
+     * @param listeners loop listeners receiving training lifecycle callbacks
+     * @param <S> state type
+     * @param <A> action type
+     * @throws IllegalArgumentException if {@code numEpisodes} is negative
+     */
+    public static <S, A> void run(
+            Environment<S, A> env,
+            Policy<S, A> policy,
+            Predictor<S> predictor,
+            int numEpisodes,
+            LoopListener... listeners) {
         if (numEpisodes < 0)
             throw new IllegalArgumentException(
                     "numEpisodes must be non-negative, got: " + numEpisodes);
         int totalSteps = 0;
 
         for (int ep = 0; ep < numEpisodes; ep++) {
-            policy.reset();
+            notifyEpisodeStart(ep, listeners);
             S state = env.reset();
             List<A> actions = env.getActions(state);
 
@@ -98,14 +138,32 @@ public class RLLoop {
                 A action = policy.selectAction(state, actions);
                 StepResult<S> result = env.step(action);
                 predictor.observe(state, result);
-                policy.onStep(++totalSteps);
+                notifyStep(++totalSteps, listeners);
 
                 if (result.done()) break;
                 state = result.nextState();
                 actions = env.getActions(state);
             }
 
-            policy.onEpisodeEnd(ep);
+            notifyEpisodeEnd(ep, listeners);
+        }
+    }
+
+    private static void notifyEpisodeStart(int episode, LoopListener... listeners) {
+        for (LoopListener listener : listeners) {
+            listener.onEpisodeStart(episode);
+        }
+    }
+
+    private static void notifyStep(int totalSteps, LoopListener... listeners) {
+        for (LoopListener listener : listeners) {
+            listener.onStep(totalSteps);
+        }
+    }
+
+    private static void notifyEpisodeEnd(int episode, LoopListener... listeners) {
+        for (LoopListener listener : listeners) {
+            listener.onEpisodeEnd(episode);
         }
     }
 }
